--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><meta charset="utf-8"><meta http-equiv="refresh" content="0; URL=https://gits5213.github.io/githubAction/6/">
+<!DOCTYPE html><meta charset="utf-8"><meta http-equiv="refresh" content="0; URL=https://gits5213.github.io/cypressJSgithubActionAllureReport/7/">
 <meta http-equiv="Pragma" content="no-cache"><meta http-equiv="Expires" content="0">
